# python-examples-by-ai

./: .gitignore  ai-topic.md  example.db-shm  example.db-wal  notes.md
Advanced/: decorators.py  generators.py  multithreading_and_multiprocessing.py  working_with_databases.py
demo/: demo.md
demo/AI-Chatbot/: .coverage  .gitignore  README.md  app.py  chat_history.json  example.py  pyproject.toml  ruff.toml
demo/AI-Chatbot/src/: __init__.py  client.py  config.py  example.py  storage.py  views.py
demo/AI-Chatbot/static/: script.js  style.css
demo/AI-Chatbot/templates/: index.html
demo/AI-Chatbot/tests/: test_app.py  test_example.py  test_storage.py
demo/Blog-Generator/: README.md  app.py
demo/Code-Explanation-Bot/: README.md  app.py
demo/Email-Reply-Generator/: README.md  app.py
demo/Image-Caption-Generator/: README.md  app.py
demo/Interview-Question-Generator/: README.md  app.py
demo/PDF-QA-App/: README.md  app.py  requirements.txt
demo/Personal-Learning-Assistant/: README.md  app.py
demo/Resume-Analyzer/: app.py  requirements.txt
demo/YouTube-Summarizer/: README.md  app.py  requirements.txt
learn-js/: 1.js  index.html
learn-node/: 1.js  2.js  3.js  4.js  package.json
learn-python/: 1.md  1.py  2.py  3.py  4.py  5.py  6.py  7.py  list.md  more.md  sample_program.py  topics.md
learn-python/100/: 2.py  3.py  4.py  5.py  8.py  core.md
learn-python/APIs/: Django_REST.py  FastAPI_REST.py  Flask_REST.py  GraphQL_Graphene.py  GraphQL_Strawberry.py  JWT_Authentication.py  core.md
web/: app.js  index.html  style.css
(+534 files in other folders)
