[tool.poetry]
name = "ai-chatbot"
version = "0.1.0"
description = "AI Chatbot built with Flask and OpenAI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "app.py"},
    {include = "example.py"},
]

[tool.poetry.dependencies]
python = "^3.10"
flask = ">=2.0"
openai = ">=1.0"
python-dotenv = ">=1.0"

[tool.poetry.group.dev.dependencies]
black = ">=24.0"
ruff = ">=0.4"
pytest = ">=8.0"
pytest-cov = ">=5.0"
coverage = {extras = ["toml"], version = ">=7.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
(
  /(\.
    | \.venv
    | build
    | dist
  )/
)
'''

# [tool.ruff]
# target-version = "py310"
# line-length = 88

# [tool.ruff.lint]
# select = ["E", "F", "I", "UP", "B", "SIM"]
# ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0
